assets/css/styles.css
/* ... */
 .why-choose-us .box-icons .box h5{
    font-size: 25px;
    line-height: 32.5px;
    font-weight: 700px;
    margin: 20px auto;
 }

 .why-choose-us .box-icons .box p{
    flex: 1
 }


 .why-choose-us .video-section {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%; /* Full width of the container */
    height: 520px; /* Fixed height */
    padding: 20px; /* Optional: Add padding for spacing */
}

.why-choose-us .video-container {
    position: relative;
    width: auto; /* Let the width adjust based on the height */
    height: 100%;
    max-width: 100%; /* Optional: Ensure it doesn't overflow */
    /* aspect-ratio: 16 / 9;  */
    cursor: pointer;
}
.why-choose-us .video-container img{
    border-radius: 20px;
 }

.why-choose-us .video-placeholder {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.why-choose-us .play-icon {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: rgba(58, 236, 42, 0.24);
    border-radius: 50%;
    padding: 15px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
}

.why-choose-us .play-icon img {
    width: 80px; /* Adjust size of the play button image */
    height: 80px;
}



@media (max-width: 991px) {
    .why-choose-us .heading-row{
        flex-direction: column;
        align-items: start !important;
    }
    .heading-row h1 {
        font-size: calc(2.5rem + 1vw) !important; /* Adjusted scaling for medium screens */
        line-height: 1.2 !important;
        margin-top: 2rem;
    }

 }
 @media (max-width: 640px) {
    .why-choose-us .container{
        margin: 0 1rem;

    }
    .why-choose-us .box-icons {
        flex-direction: column;
        align-items: start;
        row-gap: 2rem;
     }
     .why-choose-us .box-icons .box{
        display: flex;
        align-items: top;
        justify-content: center;
        column-gap: 1rem;
     }
     .why-choose-us .box-icons .box h5{
        margin: 0;
     }
     .why-choose-us .box-icons .box{
        margin: 0;
     }
     .why-choose-us .video-section {
        height: fit-content;
     }
     .why-choose-us .video-container img{
        width: 90%;
     }
 }

  /*******************************************************
 Why choose us section   END
 *********************************************************/



   /*******************************************************
 About Us section Start
 *********************************************************/


.about .title {
    display: flex;
    align-items: center;
    color: var(--blue);
 }
 

 .about .col-img {
    background-image: url(../img/about-img.png);
    background-repeat: no-repeat;
    background-size: cover;
    border-radius: 20px;
    height: auto;
    min-height: 300px;
   
 }

 .about .col-txt .mission {
    font-size: 25px;
    font-weight: 700;
    line-height: 32.5px;
 }

 .about .col-txt .m {
    padding: 21px 24px;
    border-radius: 8px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);

    border: 1px solid #CAD9E8;
    background-color: #F5F6F7;
    transition: background 1s ease, color 1s ease;
    cursor: cell;

 }

 #onhover {
    background-color: var(--blue);
    color: white;
    transition: all 1s ease;
 }

 /*******************************************************
 About Us section END
 *********************************************************/



/*******************************************************
product section Start
*********************************************************/

.products {
    background-color: var(--dark-blue);
}
.products .title {
    display: flex;
    align-items: center;
    justify-content: center;
    color: var(--blue);
 }

 
 /* .products {
    display: flex;
    gap: 20px;

 } */

 /* .products .box-products {
    display: flex;
    gap:10px
 } */

 .products .box-products .box {
    cursor: grab;
 }

 .products .box-products .box > img {
    width: 100%;
 }

 .products .box-products .box:hover {
    box-shadow: 0 0 10px #3aec2a3a;
    
 }

 .products .box-products .box h5{
    font-size: 25px;
    line-height: 32.5px;
    font-weight: 700px;
    margin: 20px auto;
 }

 .products .box-products .box p{
    flex: 1;
 }

 .products .shop-now {
    display: flex;
    flex-wrap: nowrap;
    align-items: center;
    width: fit-content;
    cursor: pointer;
    color: var(--green);
    text-wrap: nowrap !important;
 }

 .products .shop-now img {
    margin-left: 15px;
    transition: transform 0.4s ease; /* Add transition on transform property */
}

.products .shop-now:hover img {
    transform: translateX(30px);
}


.product-hr {
    border: 1px solid white; 
    width: 100%;
    margin: 20px 0;
}

/* statistics */

.products .stats {
    display: grid;
    grid-template-columns: repeat(4, 1fr 1fr 1fr 1fr);
    place-items: center;
    gap: 10px;
    /* flex-wrap: wrap; */
}

.products .stats .stat {
    width: 270px;
    height: 270px;
    text-align: center;
    min-width: 150px;
    border-radius: 12px;
    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.1);
    background-color: #F5F6F7;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    transition: background-color 0.3s, color 0.3s; /* Smooth transition for background and text */
    cursor: not-allowed;
}

.products .stats .stat span,
.products .stats .stat p {
    font-size: 15px;
    font-weight: 400;
    line-height: 20px;
    color: #051C2F;
    ;
    transition: color 0.3s; /* Smooth transition for text color */
}

.products .stats .stat span {
    font-size: 58px;
    font-weight: 400;
    line-height: 62.4px;
}

.products .stats .stat:hover {
    background-color: var(--blue);
}

.products .stats .stat:hover span,
.products .stats .stat:hover p {
    color: white;
}
/* ... */

